# hopsworks-sdk-test

./: Cargo.toml  README.md  pyproject.toml
python/hopsworks_sdk/: __init__.py
python/hopsworks_sdk/commons/: decorators.py  encoder.py
python/hopsworks_sdk/feature_store/: feature_group.py  util.py
python/hopsworks_sdk/feature_store/compute_engine/: python.py
python/hopsworks_sdk/feature_store/core/: job.py
python/hopsworks_sdk/feature_store/core_or_internal/: join.py
python/hopsworks_sdk/feature_store/feature_monitoring/: feature_monitoring_config.py
python/hopsworks_sdk/integrations/aws/: s3_reader.py
python/hopsworks_sdk/platform/: code.py  connection.py  project.py  user.py  util.py
python/hopsworks_sdk/platform/core/: code_api.py  hosts_api.py  job_api.py  tags_api.py
python/hopsworks_sdk/platform/internal_or_core/: tag.py
python/hopsworks_sdk/platform/internal_or_core/jobs/: job.py  job_configuration.py  training_dataset_job_conf.py
python/hopsworks_sdk/platform/jobs/: deltastreamer_jobconf.py  execution_api.py  ingestion_job_conf.py  job_schedule.py
python/hopsworks_sdk/platform/rest_api_or_service/: code_engine.py  kafka_api.py  project_api.py  services_api.py  tags_api.py  variable_api.py
python/hopsworks_sdk/services/hive/: client.py
python/hopsworks_sdk/services/kafka/: consumer.py  producer.py
python/hopsworks_sdk/services/online_store/sql/: async_client.py
python/hopsworks_sdk/services/opensearch/: opensearch_api.py
src/: lib.rs
