[project]
name = "hopsworks"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Victor Jouffrey", email = "vicatjou@gmail.com" }
]
dependencies = [
    "pyhumps==1.6.1",
    "requests",
    "furl",
    "pyjks",
    "avro==1.11.3",
    "tzlocal",
    "fsspec",
    "retrying",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
default = ["hopsworks[python,opensearch,pandas,sql,aws]"]
pyarrow = ["pyarrow>=10.0", "numpy<2"]
pandas = ["pandas<2.2.0", "numpy<2"]
aws = ["boto3"]
opensearch = ["opensearch-py>=1.1.0,<=2.4.2",]
kafka = ["confluent-kafka<=2.3.0"]
polars = ["polars>=0.20.18,<=0.21.0"]
great_expectations = ["great_expectations==0.18.12"]
sql = [
    "sqlalchemy",
    "PyMySQL[rsa]",
    "aiomysql[sa] @ git+https://git@github.com/logicalclocks/aiomysql",
    "pyhopshive[thrift]",
]
dev = [
    "pytest==7.4.4",
    "pytest-mock==3.12.0",
    "ruff",
    "pyspark==3.1.1",
    "moto[s3]==5.0.0",
    "typeguard==4.2.1",
    "mock",
]
dev-pandas1 = [
    "pytest==7.4.4",
    "pytest-mock==3.12.0",
    "ruff",
    "pyspark==3.1.1",
    "moto[s3]==5.0.0",
    "pandas<=1.5.3",
    "sqlalchemy<=1.4.48",
]
docs = [
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.17",
    "mike==2.0.0",
    "sphinx==7.2.6",
    "keras_autodoc @ git+https://git@github.com/logicalclocks/keras-autodoc",
    "markdown-include==0.8.1",
    "mkdocs-jupyter==0.24.3",
    "markdown==3.6",
    "pymdown-extensions==10.7.1",
    "mkdocs-macros-plugin==1.0.4",
    "mkdocs-minify-plugin>=0.2.0",
]
hive = [
    "pyhopshive[thrift]",
    "pyarrow>=10.0",
    "confluent-kafka<=2.3.0",
    "fastavro>=1.4.11,<=1.8.4",
]
python = [
    "hopsworks[kafka,pyarrow,aws]",
    "fastavro>=1.4.11,<=1.8.4",
    "tqdm",
]


[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.0",
]

[tool.maturin]
python-source = "python"
module-name = "hopsworks_sdk._lowlevel"
features = ["pyo3/extension-module"]
